Updated github link in sharing section

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         <h1 id="plugin-name">wChar.js</h1>
 
         <div id="addthis-toolbox" class="addthis_toolbox addthis_default_style">
-            <a id="github-button" title="GitHub">
-                <iframe src="http://ghbtns.com/github-btn.html?user=websanova&repo=wChar&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="78" height="20"></iframe>
-            </a>
+            <a id="github-button" href="https://github.com/websanova/wChar" target="_blank" title="GitHub"></a>
             <a class="addthis_button_facebook" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
             <a class="addthis_button_twitter" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
             <a class="addthis_button_google_plusone_share" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
