Updated titles and links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A jQuery plugin for `textarea`, `text` and `password` inputs to add a character counter bubble that fades in while you type and fades out when you stop typing." />
     <meta name = "owner" content = "Websanova" />
     <link rel="icon" type="image/vnd.microsoft.icon" href="./assets/img/favicon.ico" />
-    <title>Websanova :: wChar</title>
+    <title>wChar :: jQuery Character Counter Plugin</title>
     
     <script type="text/javascript" src="./assets/jquery.1.9.1.min.js"></script>
     <link rel="Stylesheet" type="text/css" href="./assets/demo.css" />
@@ -28,12 +28,12 @@
 
         <div id="addthis-toolbox" class="addthis_toolbox addthis_default_style">
             <a id="github-button" href="https://github.com/websanova/wChar" target="_blank" title="GitHub"></a>
-            <a class="addthis_button_facebook" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
-            <a class="addthis_button_twitter" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
-            <a class="addthis_button_google_plusone_share" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
-            <a class="addthis_button_reddit" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
-            <a class="addthis_button_dzone" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
-            <a class="addthis_button_compact" addthis:url="http://wchar.websanova.com" addthis:title="Websanova wChar Demo"></a>
+            <a class="addthis_button_facebook" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_twitter" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_google_plusone_share" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_reddit" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_dzone" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_compact" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
         </div>
 
         <h2>About</h2>
@@ -84,8 +84,8 @@
 
         <ul>
             <li><a href="http://websanova.com/plugins">More jQuery plugins by Websanova</a></li>
+            <li><a href="http://wboiler.websanova.com">jQuery Plugin Development Boilerplate</a></li>
             <li><a href="http://www.websanova.com/blog/jquery/the-ultimate-guide-to-writing-jquery-plugins">The Ultimate Guide to Writing jQuery Plugins</a></li>
-            <li><a href="http://www.websanova.com/blog/jquery/jquery-plugin-development-boilerplate">jQuery Plugin Development Boilerplate</a></li>
         </ul>
 
     </div>
