Updated title links

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
         <div id="addthis-toolbox" class="addthis_toolbox addthis_default_style">
             <a id="github-button" href="https://github.com/websanova/wChar" target="_blank" title="GitHub"></a>
-            <a class="addthis_button_facebook" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
-            <a class="addthis_button_twitter" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
-            <a class="addthis_button_google_plusone_share" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
-            <a class="addthis_button_reddit" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
-            <a class="addthis_button_dzone" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
-            <a class="addthis_button_compact" addthis:url="http://wchar.websanova.com" addthis:title="wChar jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_facebook" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_twitter" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_google_plusone_share" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_reddit" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_dzone" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
+            <a class="addthis_button_compact" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
         </div>
 
         <h2>About</h2>
