Cleaned up styling for text bubbles Added grunt Added min version

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <h2>Demos</h2>
 
-        <script type="text/javascript" src="./wChar.js"></script>
+        <script type="text/javascript" src="./wChar.min.js"></script>
         <link rel="Stylesheet" type="text/css" href="./wChar.css" />
 
         <div class="content-box">
