--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <meta property="og:type" content="article"/>
     <meta property="og:site_name" content="Websanova"/>
 
-    <link rel="icon" type="image/vnd.microsoft.icon" href="./assets/img/favicon.ico" />
     <title>wChar :: jQuery Character Counter Plugin</title>
     
+    <!-- filestart -->
+    <link rel="icon" type="image/vnd.microsoft.icon"  href="./assets/img/favicon.ico" />
     <script type="text/javascript" src="./assets/jquery.1.9.1.min.js"></script>
     <link rel="Stylesheet" type="text/css" href="./assets/demo.css" />
+    <!-- fileend -->
 </head>
 <body>
+    <!-- headstart -->
     <header>
         <a id="header-logo" href="http://websanova.com"></a>
 
@@ -30,6 +33,7 @@
             <a href="http://websanova.com/services">Services</a>
         </div>
     </header>
+    <!-- headend -->
 
     <div id="content">
         <h1 id="plugin-name">wChar.js</h1>
@@ -43,6 +47,21 @@
             <a class="addthis_button_dzone" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
             <a class="addthis_button_compact" addthis:url="http://wchar.websanova.com" addthis:title="jQuery Character Counter Plugin"></a>
         </div>
+
+        <!-- adsstart -->
+        <div id="adsblock">
+            <script type="text/javascript"><!--
+                google_ad_client = "ca-pub-3292441848617055";
+                /* plugin pages */
+                google_ad_slot = "1499872532";
+                google_ad_width = 120;
+                google_ad_height = 600;
+                //-->
+                </script>
+                <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            </script>
+        </div>
+        <!-- adsend -->
 
         <h2>About</h2>
 
@@ -90,14 +109,16 @@
 
         <h2>Resources</h2>
 
+        <!-- resourcestart -->
         <ul>
             <li><a href="http://websanova.com/plugins">More jQuery plugins by Websanova</a></li>
             <li><a href="http://wboiler.websanova.com">jQuery Plugin Development Boilerplate</a></li>
             <li><a href="http://www.websanova.com/blog/jquery/the-ultimate-guide-to-writing-jquery-plugins">The Ultimate Guide to Writing jQuery Plugins</a></li>
         </ul>
-
+        <!-- resourceend -->
     </div>
 
+    <!-- footerstart -->
     <footer>
         <div id="footer-icons">
             <!--a id="youtube-icon" href="http://websanova.com/youtube" target="_blank"></a-->
@@ -136,5 +157,6 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
+    <!-- footerend -->
 </body>
 </html>
